--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,13 +1,11 @@
 body {
-    /* background: linear-gradient(to right, rgb(3, 3, 3), rgb(185, 178, 178), rgba(19, 17, 17, 0.562)  );
-    background: linear-gradient(to right, rgba(39, 8, 8, 0.562), rgba(0, 0, 0, 0.562), rgb(0, 0, 0) );*/
-
     background: linear-gradient(to right, rgb(0, 0, 0), rgb(44, 42, 42));
     font-family: 'Prosto One';
-    font-size: 20px;
+    font-size: 15px;
     color: rgb(214, 210, 210);
-    padding-bottom: 100px;
+    padding-bottom: 0;
     font-style: solid bold;
+    
 }
 
 .prosto-one-regular {
@@ -31,8 +29,8 @@ header {
     bottom: 0;
     height: 95px;
     color: rgb(231, 231, 231);
-    font-size: 30px;
-    position: fixed;
+    font-size: 20px;
+    position: sticky;
     top: 0;
     width: 100%;
 }
@@ -51,13 +49,19 @@ header {
     gap: 1.5rem;
 }
 
-.lista-nav {
+.navLink {
     text-decoration: none;
+    color: aliceblue;
+}
+
+.navLink.active {
+    font-weight: bold;
+    text-decoration: underline darkred;
+    
 }
 
 .lista-nav:hover {
     background-color: rgb(112, 112, 112);
-    /*padding: 4px;*/
     border-radius: 5%;
     height: 100%;
     cursor: pointer;
@@ -65,9 +69,10 @@ header {
 
 
 .photo-container {
-
+    
     margin: 100px auto;
     max-width: fit-content;
+
 
 }
 
@@ -75,7 +80,12 @@ header {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 1rem;
+    top: 0;
     
+}
+
+.card-foto{
+    text-align: center;
 }
 
 .item-foto {
@@ -84,20 +94,29 @@ header {
     padding: 1rem;
     width: auto;
     height: 15rem;
+    text-align: center;
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
-.item-foto:active {
-    width: auto;
-    height: 50rem;
-    cursor: pointer;
-    align-items: center;
-    margin-top: 1rem;
+
+.item-foto-ampliar, .item-foto-ampliar:visited{
+    color: rgb(165, 2, 2);
+}
+
+
+.titulo-foto{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    margin-top: 5px;
 }
 
 .footer {
     background: linear-gradient(to right, rgba(39, 8, 8, 0.562), rgba(0, 0, 0, 0.562), rgb(0, 0, 0));
     color: rgb(0, 0, 0);
     position: fixed;
-    padding: 1rem;
+    /*padding: 1rem;*/
     bottom: 0;
     width: 100%;
     height: 3.5em;
@@ -108,22 +127,53 @@ header {
 }
 
 .derechos {
+    margin-top: 1.25rem;
     color: whitesmoke;
 }
 
 .nombre {
+    margin-top: 1.25rem;
     color: whitesmoke;
 }
 
 .lista-redes {
+    margin-top: 1.25rem;
     list-style-type: none;
 
 }
 
-.img-redes {
+.img-redes {    
     height: 25px;
     width: 25px;
     margin: .1em .5em;
     text-align: center;
 }
 
+.notFound{
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 100px auto;
+    text-align: center;
+}
+
+.eventosDeportivos{
+    display: flex;
+    justify-content: start;
+    margin: 15px;
+}
+
+
+.card-foto-ampliada{
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 30px;
+    user-select: none;
+}
+
+
+
+.item-foto-ampliada{
+    width: auto;
+    height: 40rem;
+    text-align: center;
+}
