--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(to right, rgb(0, 0, 0), rgb(44, 42, 42));
     font-family: 'Prosto One';
-    font-size: 15px;
+    font-size: 17px;
     color: rgb(214, 210, 210);
     padding-bottom: 0;
     font-style: solid bold;
@@ -221,14 +221,15 @@ header {
 .btn-Vaciar{
     margin-top: 0.5em;
     margin-left: 1em;
-    background-color: rgb(248, 47, 47);
+    background: linear-gradient(to left,  rgb(248, 47, 47), rgb(88, 23, 23));
+    
     color: rgb(19, 22, 20);
     font-size: 25px;
     
 }
 
 .btn-Vaciar:hover{
-    background-color: rgb(255, 0, 0);
+    background: rgb(197, 7, 7);
     color: rgb(19, 22, 20);
 }
 .carrito{
@@ -299,4 +300,74 @@ margin-bottom: 1rem;
 [table]{
     user-select: none;
 }
+
+.btn-Finalizar{
+    margin-top: 0.5em;
+    margin-left: 1em;
+    background: linear-gradient(to left,  rgb(226, 227, 231),  rgb(58, 59, 61));
+    text-decoration: none;
+    color: rgb(19, 22, 20);
+    font-size: 23px;
+    border: 4px solid rgb(85, 85, 211);
+    
+    
+}
+.btn-Seguir{
+    margin-top: 0.5em;
+    margin-left: 1em;
+    background: linear-gradient(to left,  rgb(132, 139, 127), rgb(61, 78, 52));
+    text-decoration: none;
+    color: rgb(19, 22, 20);
+    font-size: 23px;
+    border: 4px solid rgb(2, 163, 2);
+}
+
+.orden-compra{
+    width: 50%;
+    place-content: center;
+    background: linear-gradient(to right, rgba(39, 8, 8, 0.562), rgba(0, 0, 0, 0.562), rgb(0, 0, 0));
+    text-align: center;
+    margin: 15% 25%;
+    padding: 3rem;
+    border:double 2px gray;
+}
+
+ .orden-compra p, h2 {
+    padding: 5px
+
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sobreMi{
+    width: 30%;
+    text-align: center;
+    margin: 0;
+}
+
+.foto-silueta{
+    transition: left;
+    width: 30%;
+    height: 30%;
+    box-shadow: 55%;
+}
+
+.container-form{
+    align-items: start;
+    width:70%;
+    padding: 0.1rem;
+    margin: 2rem;
+}
+.item-form{
+    width: 70%;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    font-size: larger;
+
+}
+
 
