se agrega localStorage y se mejoran estilos

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -298,6 +298,10 @@ header {
 
 }
 
+.total-carrito{
+    font-size: 20px;
+}
+
 .btn-borrar {
     background-color: black;
     margin-left: 2rem;
