--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -72,7 +72,7 @@ header {
 
 .photo-container {
 
-    margin: 100px 1rem;
+    margin: 2rem 1rem;
 
 }
 
@@ -137,7 +137,7 @@ header {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 6rem;
+    height: 4rem;
     text-align: center;
     display: flex;
     justify-content: space-around;
