--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -383,6 +383,7 @@ h2 {
     justify-content: space-evenly;
     align-items: center;
     overflow: hidden;
+    height: 100%;
 }
 
 .container-sobreMi:hover .foto-silueta {
@@ -422,10 +423,10 @@ h2 {
         width: 100%;
     }
     body{
-        font-size: 15px;
+        font-size: 12px;
     }
     header{
-        font-size: 15px;
+        font-size: 12px;
     }
     .footer {
         height: 6rem;
@@ -447,6 +448,12 @@ h2 {
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
+    .sobreMi {
+        width: 30%;
+        line-height: 1;
+        font-size: 12px;
+    }
+    
 
     .item-foto-ampliada {
         width: auto;
@@ -530,6 +537,10 @@ h2 {
     body{
         font-size: 12px;
     }
+    .sobreMi {
+        line-height: 1.3;
+        font-size: 18px;
+    }
     .encabezado-carrito {
         font-size: 10px;
     }
@@ -558,6 +569,15 @@ h2 {
         padding-bottom: 1.25rem;
         font-size: 15px;
     
+    }
+    
+
+}
+
+@media (max-height: 650px) or (max-width:1310px) {
+    .sobreMi {
+        line-height: 1.4;
+        font-size: 22px;
     }
 
 }
