--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -595,7 +595,7 @@ h2 {
 
     }
 }
-
+/*
 @media (max-height: 650px) or (max-width: 400px) {
 
     body {
@@ -623,4 +623,4 @@ h2 {
         padding-bottom: 1rem;
     }
 
-}
+}*/
